src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {

    .input-container {
        @apply flex flex-col gap-2 mb-8 ml-12 mr-10
    }

    .reg-form-input {
        @apply border-solid border-[#c6beaa] overflow-hidden bg-white self-stretch pl-4 h-12 border rounded-lg placeholder:font-bold placeholder-[#756d58] placeholder-opacity-[0.22];
    }

    .small-header {
        @apply text-sm font-bold;
    }

    .line {
        @apply border-solid border-[#c6beaa] w-48 shrink-0 h-px border-t border-b-0 border-x-0;
    }

    .main-page {
        @apply overflow-hidden flex flex-row gap-5 w-full items-center px-16 justify-center h-[100vh]
    }

    .container-text {
        @apply text-center text-2xl font-semibold
    }

    .idea-bubble {
        @apply bg-white flex justify-center items-center rounded-[50px] w-1/2 h-20
    }

    .dashboard-element {
        @apply bg-[#e7ecff] rounded-[50px] items-center justify-center shadow-[10px_10px_20px_5px_#4541332e]
    }

    .history-container {
        @apply bg-[#1976d214] flex flex-col justify-center w-full items-center hover:bg-[#3877b53b] cursor-pointer
    }

    .graph-type-container {
        @apply bg-[#1976d214] self-stretch flex flex-col justify-center gap-3 h-32 rounded-[50px] pl-16 items-start
    }

    .type-button {
        @apply appearance-none w-4 h-4 cursor-pointer bg-gray-300 checked:bg-red-950 rounded-[5px]
    }

    .graph-checkbox {
        @apply flex flex-row items-center gap-1 text-sm
    }

    .color-note-button {
        @apply rounded-3xl w-4 h-4
    }
}

